--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "elec",
   "version": "0.1.0",
   "private": true,
+  "main": "electron-init.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "electron": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5000 BROWSER=non react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "PORT=5000 electron .",
+    "dev": "yarn start & yarn electron"
   },
   "eslintConfig": {
     "extends": [
