--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elec",
   "version": "0.1.0",
   "private": true,
-  "main": "electron-init.js",
+  "main": "main.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron-builder": "^22.10.5",
+    "prettier": "^2.2.1"
   }
 }
