--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
+    "robotjs": "^0.6.0",
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
@@ -75,7 +76,8 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "electron": "PORT=5000 electron .",
-    "dev": "yarn start & yarn electron"
+    "dev": "yarn start & yarn electron",
+    "rebuild": "npm rebuild --runtime=electron --target=12.0.4 --disturl=https://atom.io/download/atom-shell --abi=83"
   },
   "eslintConfig": {
     "extends": [
